--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -16,7 +16,7 @@
                         <ul>
                             <% order.orderProducts.forEach(product => { %>
                                 <li>
-                                    <%= product.productData.title %> (<%= product.quantity %>)
+                                    <%= product.productData.title %> (<%= product.quantity %>) -- <a href="/orders/<%= order._id %>"> Invoice</a>
                                 </li>
                             <% }); %>
                         </ul>
